# linkedin-prise-de-contact

./: .env.example  README.md  prise_de_contact.md  prise_de_contact1.md  prise_de_contact2.md  pyproject.toml  report.md  requirements.txt
knowledge/: report.md  report_laurent.md
src/hdw/: crew.py  main.py  test.py  test2.py
src/hdw/config/: agents.yaml  tasks.yaml
