[project]
name = "hdw"
version = "0.1.0"
description = "hdw using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
hdw = "hdw.main:run"
run_crew = "hdw.main:run"
train = "hdw.main:train"
replay = "hdw.main:replay"
test = "hdw.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
entrypoint = "hdw.main:run"
sources = ["src"]
